src/test/ui/typeck/typeck-builtin-bound-type-parameters.stderr
error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/typeck-builtin-bound-type-parameters.rs:1:16
   |
LL | fn foo1<T:Copy<U>, U>(x: T) {}
   |                ^ unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/typeck-builtin-bound-type-parameters.rs:4:19
   |
LL | trait Trait: Copy<dyn Send> {}
   |                   ^^^^^^^^ unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/typeck-builtin-bound-type-parameters.rs:7:26
   |
LL | struct MyStruct1<T: Copy<T>>;
   |                          ^ unexpected type argument

error[E0107]: wrong number of lifetime arguments: expected 0, found 1
  --> $DIR/typeck-builtin-bound-type-parameters.rs:10:30
   |
LL | struct MyStruct2<'a, T: Copy<'a>>;
   |                              ^^ unexpected lifetime argument

error[E0107]: wrong number of lifetime arguments: expected 0, found 1
  --> $DIR/typeck-builtin-bound-type-parameters.rs:14:20
   |
LL | fn foo2<'a, T:Copy<'a, U>, U>(x: T) {}
   |                    ^^ unexpected lifetime argument

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/typeck-builtin-bound-type-parameters.rs:14:24
   |
LL | fn foo2<'a, T:Copy<'a, U>, U>(x: T) {}
   |                        ^ unexpected type argument

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0107`.
